--- a/backendTS/package.json
+++ b/backendTS/package.json
@@ -10,16 +10,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.7.4",
-    "prisma": "^5.20.0",
+    "prisma": "^5.22.0",
     "tsx": "^4.19.1",
     "typescript": "^5.6.2"
   },
   "dependencies": {
     "@fastify/cors": "^10.0.1",
-    "@prisma/client": "^5.20.0",
+    "@prisma/client": "^5.22.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "fastify": "^5.0.0",
+    "fastify": "^5.1.0",
     "mongodb": "^6.9.0",
     "node": "^22.11.0"
   }
